@@ -1,89 +1,3 @@
-//// ================================================
-//// 5. Service (updated with DTOs + exception handling)
-//// ================================================
-//
-//package com.example.Queue_Master.service;
-//
-//import com.example.Queue_Master.dto.DoctorDTO;
-//import com.example.Queue_Master.entity.Branch;
-//import com.example.Queue_Master.entity.BranchService;
-//import com.example.Queue_Master.entity.Doctor;
-//import com.example.Queue_Master.entity.ServiceCategory;
-//import com.example.Queue_Master.exception.ResourceNotFoundException;
-//import com.example.Queue_Master.repository.*;
-//import org.springframework.stereotype.Service;
-//
-//import java.util.List;
-//
-//@Service
-//public class MainService {
-//
-//    private final ServiceCategoryRepository categoryRepository;
-//    private final BranchRepository branchRepository;
-//    private final DoctorRepository doctorRepository;
-//    private final BranchServiceRepository branchServiceRepository;
-//
-//    public MainService(
-//            ServiceCategoryRepository categoryRepository,
-//            BranchRepository branchRepository,
-//            DoctorRepository doctorRepository,
-//            BranchServiceRepository branchServiceRepository) {
-//        this.categoryRepository = categoryRepository;
-//        this.branchRepository = branchRepository;
-//        this.doctorRepository = doctorRepository;
-//        this.branchServiceRepository = branchServiceRepository;
-//    }
-//
-//    public List<ServiceCategory> getAllCategories() {
-//        return categoryRepository.findAll();
-//    }
-//
-//    public List<Branch> getBranchesByCategory(Long categoryId) {
-//        if (categoryId == null) return List.of();
-//        return branchRepository.findByCategory_Id(categoryId);
-//    }
-//
-//    public List<DoctorDTO> getDoctorsByBranch(Long branchId) {
-//        if (branchId == null) return List.of();
-//
-//        return doctorRepository.findByBranch_Id(branchId).stream()
-//                .map(this::toDoctorDTO)
-//                .toList();
-//    }
-//
-//    public DoctorDTO getDoctorById(Long doctorId) {
-//        Doctor doctor = doctorRepository.findById(doctorId)
-//                .orElseThrow(() -> new ResourceNotFoundException("Doctor not found with id: " + doctorId));
-//
-//        return toDoctorDTO(doctor);
-//    }
-//
-//    public List<BranchService> getBranchServicesByBranch(Long branchId) {
-//        if (branchId == null) return List.of();
-//        return branchServiceRepository.findByBranch_Id(branchId);
-//    }
-//
-//    private DoctorDTO toDoctorDTO(Doctor doctor) {
-//        return new DoctorDTO(
-//                doctor.getId(),
-//                doctor.getName(),
-//                doctor.getSpecialization(),
-//                doctor.getExperience(),
-//                doctor.getTiming(),
-//                doctor.getRating(),
-//                doctor.getStatus(),
-//                doctor.getAvgConsultationTime(),
-//                doctor.getBranchId(),
-//                doctor.getBranch() != null ? doctor.getBranch().getName() : null
-//        );
-//    }
-//}
-
-
-
-
-
-
 
 package com.example.Queue_Master.service;
 
@@ -95,28 +9,20 @@ import com.example.Queue_Master.entity.Doctor;
 import com.example.Queue_Master.entity.ServiceCategory;
 import com.example.Queue_Master.exception.ResourceNotFoundException;
 import com.example.Queue_Master.repository.*;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class MainService {
 
     private final ServiceCategoryRepository categoryRepository;
     private final BranchRepository branchRepository;
     private final DoctorRepository doctorRepository;
     private final BranchServiceRepository branchServiceRepository;
-
-    public MainService(
-            ServiceCategoryRepository categoryRepository,
-            BranchRepository branchRepository,
-            DoctorRepository doctorRepository,
-            BranchServiceRepository branchServiceRepository) {
-        this.categoryRepository = categoryRepository;
-        this.branchRepository = branchRepository;
-        this.doctorRepository = doctorRepository;
-        this.branchServiceRepository = branchServiceRepository;
-    }
 
     public List<ServiceCategory> getAllCategories() {
         return categoryRepository.findAll();
@@ -129,10 +35,9 @@ public class MainService {
 
     public List<DoctorDTO> getDoctorsByBranch(Long branchId) {
         if (branchId == null) return List.of();
-
         return doctorRepository.findByBranch_Id(branchId).stream()
                 .map(this::toDoctorDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public DoctorDTO getDoctorById(Long doctorId) {
@@ -143,13 +48,10 @@ public class MainService {
 
     public List<BranchServiceDTO> getBranchServicesByBranch(Long branchId) {
         if (branchId == null) return List.of();
-
-        return branchServiceRepository.findByBranch_Id(branchId).stream()
+        return branchServiceRepository.findByBranch_Id(branchId).stream()   // ← FIXED HERE (was findByBranchId)
                 .map(this::toBranchServiceDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
-
-    // ──────── Mapping methods ────────
 
     private DoctorDTO toDoctorDTO(Doctor doctor) {
         return new DoctorDTO(
@@ -161,7 +63,7 @@ public class MainService {
                 doctor.getRating(),
                 doctor.getStatus(),
                 doctor.getAvgConsultationTime(),
-                doctor.getBranchId(),
+                doctor.getBranch() != null ? doctor.getBranch().getId() : null,
                 doctor.getBranch() != null ? doctor.getBranch().getName() : null
         );
     }
